--- a/LlamaMusicApp/LlamaMusicApp/LlamaMusicApp.csproj
+++ b/LlamaMusicApp/LlamaMusicApp/LlamaMusicApp.csproj
@@ -125,6 +125,9 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Models\MusicCollection.cs" />
+    <Compile Include="Models\Song.cs" />
+    <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -135,6 +138,8 @@
   <ItemGroup>
     <Content Include="Assets\LlamaMusicBlue.png" />
     <Content Include="Assets\LlamaMusicLogo.png" />
+    <Content Include="Assets\Sample Music\Derek_Clegg_-_Annalise.mp3" />
+    <Content Include="Assets\Sample Music\Monplaisir_-_Estampe_Galactus_Barbare_Epaul_Giraffe_Ennui.mp3" />
     <Content Include="Assets\StoreLogo.scale-400.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
@@ -164,9 +169,7 @@
       <Version>6.2.9</Version>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
