--- a/LlamaMusicApp/LlamaMusicApp/LlamaMusicApp.csproj
+++ b/LlamaMusicApp/LlamaMusicApp/LlamaMusicApp.csproj
@@ -125,7 +125,7 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Models\MusicCollection.cs" />
+    <Compile Include="Models\Playlist.cs" />
     <Compile Include="Models\Song.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
