New base classes, enhancements to exiting base classes
Every user has their own observable collection which comes with a couple of songs. They can add music to it and edit details of the song object such as title artist and album. The songs in their collection can also be categorized by artist, title and album

--- a/LlamaMusicApp/LlamaMusicApp/LlamaMusicApp.csproj
+++ b/LlamaMusicApp/LlamaMusicApp/LlamaMusicApp.csproj
@@ -125,9 +125,10 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Models\Playlist.cs" />
-    <Compile Include="Models\Song.cs" />
-    <Compile Include="Models\User.cs" />
+    <Compile Include="Model\Playlist.cs" />
+    <Compile Include="Model\Song.cs" />
+    <Compile Include="Model\SongManager.cs" />
+    <Compile Include="Model\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
