--- a/LlamaMusicApp/LlamaMusicApp/LlamaMusicApp.csproj
+++ b/LlamaMusicApp/LlamaMusicApp/LlamaMusicApp.csproj
@@ -127,7 +127,7 @@
     </Compile>
     <Compile Include="Model\Playlist.cs" />
     <Compile Include="Model\Song.cs" />
-    <Compile Include="Model\SongManager.cs" />
+    <Compile Include="ViewModel\SongManager.cs" />
     <Compile Include="Model\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
